# jarvis

./: .env.example  .gitignore  README.md  actions.py  calendar_access.py  ci  jarvis  mail_access.py  mc_client.py  notes_access.py  pyproject.toml  qa.py  requirements-dev.txt  requirements.txt  sanitize.py  server.py  tmux_sessions.py  work_mode.py
.github/workflows/: ci.yml
frontend/: index.html  vite.config.ts
frontend/src/: main.ts  settings.ts  style.css  ws.ts
tests/: test_browser_integration.py  test_classifier.py  test_mc_client.py  test_mc_integration.py  test_sanitize.py  test_server_logic.py  test_tmux_sessions.py
